feat: Adiciona autenticação de usuário e controle de limites de geração para anúncios, cópias, funis e canvas

--- a/env.example
+++ b/env.example
@@ -10,9 +10,14 @@ MERCADOPAGO_WEBHOOK_SECRET=your-webhook-secret
 # Application
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
+# AI / Gemini
+GEMINI_API_KEY=your-gemini-api-key
+GEMINI_MODEL=gemini-2.5-flash-lite
+
 # Security
 JWT_SECRET=your-jwt-secret
 ENCRYPTION_KEY=your-encryption-key
+INTERNAL_API_SECRET=your-internal-api-secret-change-this
 
 # Email (opcional para notificações)
 SMTP_HOST=smtp.example.com
